# MiniShell

./: CMakeLists.txt  README.md  build.sh  install.sh  main.cpp  minishell_builtins.hpp  minishell_colors.hpp  minishell_expand.hpp  minishell_jobs.hpp  minishell_prompt.hpp  minishell_tokenize.hpp
